# framework-architect

./: .env.example  .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: architecture.md  manual-smoke-test.md  template-smoke-fixtures.md
src/: main.tsx
src/domain/: defaults.ts  models.ts
src/framework_forge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/lib/: identity.ts
src/persistence/: agentRunJournalRepository.ts  localProjectRepository.ts  migrations.ts  projectRepository.ts  revisionTypes.ts  storageKeys.ts  types.ts
src/schema/: blueprint.ts  common.ts  entities.ts  index.ts
tests/: agentRunHarness.test.ts  blueprintCommandCenter.test.tsx  blueprintForesight.test.ts  blueprintImprovementFixes.test.ts  blueprintQualityReview.test.ts  buildBlueprintLineage.test.ts  buildExpansionRoadmap.test.ts  buildImplementationPlan.test.ts  changeReview.test.ts  completeBlueprintStructure.test.ts  distillConversation.test.ts  editorConfigRelations.test.ts  exportOutputs.test.ts  frameworkTemplates.test.ts  guidedIntakeComposer.test.ts  manualCheckpoint.test.ts  persistenceMigration.test.ts  projectCreation.test.ts  quarantineRecovery.test.ts  recoveryComparePreview.test.ts  relationOptions.test.ts  relationSelectors.test.tsx  restoreConfirmation.test.ts  revisionComparison.test.ts  revisionHistory.test.ts  schemaHardening.test.ts  templateGuidedComposition.test.ts  templateSmokeFixtures.test.ts  test_smoke.py  validateBlueprint.test.ts
(+72 files in other folders)
